--- a/FinalProject-AdventurerTextSim/FinalProject-AdventurerTextSim/Base.lproj/Main.storyboard
+++ b/FinalProject-AdventurerTextSim/FinalProject-AdventurerTextSim/Base.lproj/Main.storyboard
@@ -61,21 +61,35 @@
                                 <rect key="frame" x="350" y="60" width="35" height="35"/>
                                 <state key="normal" image="help"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="brN-XM-0wo">
+                                <rect key="frame" x="97" y="68" width="35" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gold" translatesAutoresizingMaskIntoConstraints="NO" id="dRJ-EL-XT6">
+                                <rect key="frame" x="64" y="65" width="25" height="25"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ibV-eT-zkb" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="85" id="0ON-vR-CcN"/>
                             <constraint firstItem="uX4-Lv-4Oa" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="392" id="2Jw-sY-v18"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="uX4-Lv-4Oa" secondAttribute="trailing" constant="63" id="3NE-Rp-fmd"/>
+                            <constraint firstItem="dRJ-EL-XT6" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="64" id="3wE-Hr-gif"/>
+                            <constraint firstItem="brN-XM-0wo" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="24" id="5Mf-lv-qZB"/>
                             <constraint firstItem="u7d-qS-J0Y" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="50" id="8hA-Iu-r5E"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="ibV-eT-zkb" secondAttribute="trailing" constant="77" id="CGK-3i-OJ6"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="u7d-qS-J0Y" secondAttribute="trailing" constant="50" id="ESB-tK-ve2"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="u7d-qS-J0Y" secondAttribute="bottom" constant="471" id="EqM-li-1XR"/>
                             <constraint firstItem="4zd-Jm-4BS" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="172" id="Gbp-cu-Pte"/>
                             <constraint firstItem="deE-7e-jV4" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="16" id="IhT-yO-rf5"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="brN-XM-0wo" secondAttribute="trailing" constant="282" id="KDr-VW-vWD"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="brN-XM-0wo" secondAttribute="bottom" constant="727" id="Lus-ON-g7V"/>
                             <constraint firstItem="I3D-U6-ljR" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="328" id="MfS-EN-b2q"/>
                             <constraint firstItem="4zd-Jm-4BS" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="60" id="Pom-YU-s6F"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="I3D-U6-ljR" secondAttribute="bottom" constant="411" id="ToN-lP-PpM"/>
+                            <constraint firstItem="dRJ-EL-XT6" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="21" id="WS9-k8-uhh"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="ibV-eT-zkb" secondAttribute="bottom" constant="640" id="Y74-Fb-NlA"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="4zd-Jm-4BS" secondAttribute="trailing" constant="59" id="aof-TO-h6d"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="deE-7e-jV4" secondAttribute="trailing" constant="29" id="dYF-At-CNp"/>
@@ -86,8 +100,11 @@
                             <constraint firstItem="I3D-U6-ljR" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="183" id="onN-9V-eev"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="deE-7e-jV4" secondAttribute="bottom" constant="718" id="rP5-Ew-JPu"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="uX4-Lv-4Oa" secondAttribute="bottom" constant="193" id="s2o-OM-926"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="dRJ-EL-XT6" secondAttribute="trailing" constant="325" id="tGd-kS-fu8"/>
                             <constraint firstItem="uX4-Lv-4Oa" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="64" id="wbn-pF-YWn"/>
                             <constraint firstItem="u7d-qS-J0Y" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="229" id="xOA-ua-GIl"/>
+                            <constraint firstItem="brN-XM-0wo" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="97" id="xYt-TZ-bmY"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="dRJ-EL-XT6" secondAttribute="bottom" constant="723" id="zjU-Ss-mbF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
@@ -250,6 +267,7 @@
         <image name="History" width="25" height="25"/>
         <image name="Play" width="25" height="25"/>
         <image name="gameLogo" width="342.44143676757812" height="44.30859375"/>
+        <image name="gold" width="50" height="50"/>
         <image name="help" width="50" height="50"/>
     </resources>
 </document>
