--- a/FinalProject-AdventurerTextSim/FinalProject-AdventurerTextSim/Base.lproj/Main.storyboard
+++ b/FinalProject-AdventurerTextSim/FinalProject-AdventurerTextSim/Base.lproj/Main.storyboard
@@ -113,6 +113,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Play!" image="Play" id="acW-dT-cKf"/>
                     <connections>
+                        <outlet property="inputTF" destination="4zd-Jm-4BS" id="vNb-Nh-YXL"/>
                         <outlet property="outputLBL" destination="u7d-qS-J0Y" id="iLB-DB-buR"/>
                     </connections>
                 </viewController>
